@@ -27,13 +27,13 @@ rainbrurpg-api - GPLV3 - Tools to generate RPG api documentation.
    URL like scripting/guile/
                      /ruby/
 
-
 === ChangeLog ===
    (6 items by revision)
    SLOC is the number of lines in src/ 
    FT is the ROADMAP file time
 
 * v0.0.0-0 (01 may 2013 - ???) SLOC ??? FT ??
+- Add GNU header for genapi.pl
 - Generate -h usage message for genapi.pl with Pod::Usage
 - Add some needed files
    COPYING, DEPENDENCIES...
